UI Design links

--- a/mineclick.html
+++ b/mineclick.html
@@ -45,6 +45,15 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * General:
 * Game development design - http://gamedevelopment.tutsplus.com/
 
+* UI:
+* Design School for Developers - http://webdesign.tutsplus.com/series/design-school-for-developers--webdesign-13793
+* Introducing Wireframes to your Design Process: http://webdesign.tutsplus.com/articles/introducing-wireframes-to-your-design-process--webdesign-13284
+* (paid) Flat UI design and development: http://webdesign.tutsplus.com/courses/flat-ui-design-and-development
+* (paid) Best practices for UI development and Design: http://webdesign.tutsplus.com/courses/flat-ui-design-and-development/lessons/best-practices-for-ui-development-design
+* (paid) JS libraries for web design: http://webdesign.tutsplus.com/courses/essential-js-libraries-for-web-design
+* (paid) User Interface Design for the Web: http://webdesign.tutsplus.com/courses/user-interface-design-for-the-web
+* 
+
 * Dark Room - Web -> IOS
 * http://www.gamasutra.com/view/news/212230/A_Dark_Rooms_unique_journey_from_the_web_to_iOS.php
 
