Added initial planning a design project link

--- a/mineclick.html
+++ b/mineclick.html
@@ -47,7 +47,8 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 
 * UI:
 * Design School for Developers - http://webdesign.tutsplus.com/series/design-school-for-developers--webdesign-13793
-* Introducing Wireframes to your Design Process: http://webdesign.tutsplus.com/articles/introducing-wireframes-to-your-design-process--webdesign-13284
+** Step 1 Planning a Design Project - http://webdesign.tutsplus.com/articles/planning-a-design-project--webdesign-13277
+** Introducing Wireframes to your Design Process: http://webdesign.tutsplus.com/articles/introducing-wireframes-to-your-design-process--webdesign-13284
 * (paid) Flat UI design and development: http://webdesign.tutsplus.com/courses/flat-ui-design-and-development
 * (paid) Best practices for UI development and Design: http://webdesign.tutsplus.com/courses/flat-ui-design-and-development/lessons/best-practices-for-ui-development-design
 * (paid) JS libraries for web design: http://webdesign.tutsplus.com/courses/essential-js-libraries-for-web-design
