Minor adjustment to action bar, added UI ideas section

--- a/mineclick.html
+++ b/mineclick.html
@@ -53,7 +53,8 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * (paid) Best practices for UI development and Design: http://webdesign.tutsplus.com/courses/flat-ui-design-and-development/lessons/best-practices-for-ui-development-design
 * (paid) JS libraries for web design: http://webdesign.tutsplus.com/courses/essential-js-libraries-for-web-design
 * (paid) User Interface Design for the Web: http://webdesign.tutsplus.com/courses/user-interface-design-for-the-web
-* 
+* UI Ideas:
+* Clicking FF7 http://clickingff7.com/#/map
 
 * Dark Room - Web -> IOS
 * http://www.gamasutra.com/view/news/212230/A_Dark_Rooms_unique_journey_from_the_web_to_iOS.php
