Refactoring crafting and generic craft/building

--- a/mineclick.html
+++ b/mineclick.html
@@ -100,7 +100,9 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/controllers/inventory.js"></script>
 <script type="text/javascript" src="js/controllers/terrainAction.js"></script>
 <script type="text/javascript" src="js/controllers/forage.js"></script>
+<script type="text/javascript" src="js/controllers/buildcraft.js"></script>
 <script type="text/javascript" src="js/controllers/craft.js"></script>
+<script type="text/javascript" src="js/controllers/build.js"></script>
 
 <!-- views -->
 <script type="text/javascript" src="js/views/core.js"></script>
@@ -112,7 +114,9 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/views/progressbar.js"></script>
 <script type="text/javascript" src="js/views/travel.js"></script>
 <script type="text/javascript" src="js/views/forage.js"></script>
+<!--<script type="text/javascript" src="js/views/buildcraft.js"></script>-->
 <script type="text/javascript" src="js/views/craft.js"></script>
+<!--<script type="text/javascript" src="js/views/build.js"></script>-->
 
 <!-- core game -->
 <script type="text/javascript" src="js/coregame/assets.js"></script>
@@ -168,9 +172,12 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 			<table id="action_container"></table>
         </div>
 		<div id="craftDiv" class="contentholder content-craft">
-            <table id="craftTable" style="font-size:10pt" class="contentholder">
-                <tr><th>blah</th><th>bleh</th></tr>
-                <tr><td>CRAFT</td><td>CRARFEAWF</td></tr>
+            <table id="craftTable" style="font-size:10pt" class="contentholder"></table>
+        </div>
+        <div id="buildDiv" class="contentholder content-build">
+            <table id="buildTable" style="font-size:10pt" class="contentholder">
+                <tr><th>blah</th></tr>
+                <tr><td>CRAFT</td></tr>
             </table>
         </div>
 		<br class="clearer"/>
