--- a/mineclick.html
+++ b/mineclick.html
@@ -40,6 +40,13 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Noty: http://ned.im/noty/#hi
 * Qtip2: http://qtip2.com/demos
 
+* Map: http://i.imgur.com/80Xmfrr.png
+* World generator: http://donjon.bin.sh/world/
+* http://topps.diku.dk/torbenm/maps.msp
+* (Google) "fractal map generator" https://www.google.com/webhp?sourceid=chrome-instant&rlz=1C1CHFX_enUS601US601&ion=1&espv=2&es_th=1&ie=UTF-8#q=fractal%20map%20generator
+* Polygon map generation: http://www-cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/
+* https://github.com/lebesnec/island.js
+
 **DESIGN
 
 * General:
