Unlocked game, temporarily disabled the story.

--- a/mineclick.html
+++ b/mineclick.html
@@ -214,7 +214,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		</div>
 	</div>
 </div>
-        <canvas id="land" height="500" width="500"></canvas>
+        <canvas id="land" height="500" width="500" hidden="true"></canvas>
         <canvas id="perlin" hidden="true"></canvas>
 <div id="joyrideTips" style="display:none">
 <!-- jquery joyride container http://zurb.com/playground/jquery-joyride-feature-tour-plugin -->
