Refactoring - removing old exploration view, controller

--- a/mineclick.html
+++ b/mineclick.html
@@ -149,7 +149,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		player.inventory = new Inventory(100, {});
 		masterState = new MasterState();
     
-        generateAndDrawLand();
+        generateAndDrawLand(constants.MAP_WIDTH, constants.MAP_HEIGHT);
 
 		if (hasSavedGameState()) {
 			loadState();
