--- a/mineclick.html
+++ b/mineclick.html
@@ -137,6 +137,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <!-- core game -->
 <script type="text/javascript" src="js/coregame/assets.js"></script>
 <script type="text/javascript" src="js/coregame/saveloadreset.js"></script>
+<script type="text/javascript" src="js/coregame/map.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 <script type="text/javascript" src="js/story.js"></script>
 
