--- a/mineclick.html
+++ b/mineclick.html
@@ -118,6 +118,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/controllers/buildcraft.js"></script>
 <script type="text/javascript" src="js/controllers/craft.js"></script>
 <script type="text/javascript" src="js/controllers/build.js"></script>
+<script type="text/javascript" src="js/controllers/travel.js"></script>
 
 <!-- views -->
 <script type="text/javascript" src="js/views/core.js"></script>
@@ -208,23 +209,25 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		</div>
 		<div id="terrainSection" class="footer-center">
 			<!--<input id="availableTerrain" class="terrainSelect" /><span id="availTer">&nbsp;</span><br/>-->
-            <table>
-                <tr>
-                    <td><button class="clearEvent" onclick="travelRelative(-1,-1);" id="doTravelNW">&#x2196;</button></td>
-                    <td><button class="clearEvent" onclick="travelRelative(0,-1);" id="doTravelN">&#x2191;</button></td>
-                    <td><button class="clearEvent" onclick="travelRelative(1,-1);" id="doTravelNE">&#x2197;</button></td>
-                </tr>
-                <tr>
-                    <td><button class="clearEvent" onclick="travelRelative(-1,0);" id="doTravelW">&#x2190;</button></td>
-                    <td><button class="clearEvent" onclick="return false;" id="nop">X</button></td>
-                    <td><button class="clearEvent" onclick="travelRelative(1,0);" id="doTravelE">&#x2192;</button></td>
-                </tr>
-                <tr>
-                    <td><button class="clearEvent" onclick="travelRelative(-1,1);" id="doTravelSW">&#x2199;</button></td>
-                    <td><button class="clearEvent" onclick="travelRelative(0,1);" id="doTravelS">&#x2193;</button></td>
-                    <td><button class="clearEvent" onclick="travelRelative(1,1);" id="doTravelSE">&#x2198;</button></td>
-                </tr>
-            </table>
+            <div id="travelSection" ><!--
+                <table>
+                    <tr>
+                        <td><button class="clearEvent" onclick="travelRelative(-1,-1);" id="doTravelNW">&#x2196;</button></td>
+                        <td><button class="clearEvent" onclick="travelRelative(0,-1);" id="doTravelN">&#x2191;</button></td>
+                        <td><button class="clearEvent" onclick="travelRelative(1,-1);" id="doTravelNE">&#x2197;</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="clearEvent" onclick="travelRelative(-1,0);" id="doTravelW">&#x2190;</button></td>
+                        <td><button class="clearEvent" onclick="return false;" id="nop">X</button></td>
+                        <td><button class="clearEvent" onclick="travelRelative(1,0);" id="doTravelE">&#x2192;</button></td>
+                    </tr>
+                    <tr>
+                        <td><button class="clearEvent" onclick="travelRelative(-1,1);" id="doTravelSW">&#x2199;</button></td>
+                        <td><button class="clearEvent" onclick="travelRelative(0,1);" id="doTravelS">&#x2193;</button></td>
+                        <td><button class="clearEvent" onclick="travelRelative(1,1);" id="doTravelSE">&#x2198;</button></td>
+                    </tr>
+                </table>-->
+            </div>
 			<button class="clearEvent" onclick="doTravel();" id="doTravel">Travel</button>
 		</div>
 		<div id="selectedTerrain" class="footer-right">
