Renamed currentTerrain to currentLocation

--- a/mineclick.html
+++ b/mineclick.html
@@ -63,6 +63,10 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * (paid) Best practices for UI development and Design: http://webdesign.tutsplus.com/courses/flat-ui-design-and-development/lessons/best-practices-for-ui-development-design
 * (paid) JS libraries for web design: http://webdesign.tutsplus.com/courses/essential-js-libraries-for-web-design
 * (paid) User Interface Design for the Web: http://webdesign.tutsplus.com/courses/user-interface-design-for-the-web
+* Examples:
+* Tympanous (tons of images) : http://tympanus.net/codrops/category/playground/
+* Modal Windows: http://tympanus.net/codrops/2013/06/25/nifty-modal-window-effects/ , Demo: http://tympanus.net/Development/ModalWindowEffects/
+
 * UI Ideas:
 * Clicking FF7 http://clickingff7.com/#/map
 
