Map and rivers now show up in debug

--- a/mineclick.html
+++ b/mineclick.html
@@ -241,7 +241,9 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		</div>
 	</div>
 </div>
-        <canvas id="land" height="500" width="500" hidden="true"></canvas>
+<div id="mapContainer">
+        <canvas id="land" height="500" width="500"></canvas>
+</div>
         <canvas id="perlin" hidden="true"></canvas>
 <div id="joyrideTips" style="display:none">
 <!-- jquery joyride container http://zurb.com/playground/jquery-joyride-feature-tour-plugin -->
