--- a/mineclick.html
+++ b/mineclick.html
@@ -139,6 +139,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/views/buildcraft.js"></script>
 <script type="text/javascript" src="js/views/craft.js"></script>
 <script type="text/javascript" src="js/views/build.js"></script>
+<script type="text/javascript" src="js/views/settlement.js"></script>
 
 <!-- core game -->
 <script type="text/javascript" src="js/coregame/assets.js"></script>
