TerrainTable now updates to show name of city

--- a/mineclick.html
+++ b/mineclick.html
@@ -234,7 +234,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
                     </tr>
                 </table>-->
             </div>
-			<button class="clearEvent" onclick="doTravel();" id="doTravel">Travel</button>
+            <!-- not sure if fast travel will be a thing: -->
+			<!--<button class="clearEvent" onclick="doTravel();" id="doTravel">Travel</button>-->
 		</div>
 		<div id="selectedTerrain" class="footer-right">
 		</div>
