--- a/mineclick.html
+++ b/mineclick.html
@@ -123,6 +123,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/controllers/craft.js"></script>
 <script type="text/javascript" src="js/controllers/build.js"></script>
 <script type="text/javascript" src="js/controllers/travel.js"></script>
+<script type="text/javascript" src="js/controllers/island.js"></script>
 <script type="text/javascript" src="js/controllers/settlement.js"></script>
 
 <!-- views -->
