Can't craft something bigger than player can carry

--- a/mineclick.html
+++ b/mineclick.html
@@ -154,7 +154,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		//////////////////////////////////////////////////////////////////////////////
 		// SETUP AND GO!
 		//////////////////////////////////////////////////////////////////////////////
-		player.inventory = new Inventory(100, {});
+		initializePlayerInventory();
 		masterState = new MasterState();
     
 
