Category model tweaks
Forgot that I can’t define assets in constants.

--- a/mineclick.html
+++ b/mineclick.html
@@ -111,6 +111,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <!-- model -->
 <script type="text/javascript" src="js/models/states.js"></script>
 <script type="text/javascript" src="js/models/model.js"></script>
+<script type="text/javascript" src="js/models/dataStructures.js"></script>
 
 <!-- controllers -->
 <script type="text/javascript" src="js/controllers/core.js"></script>
