Added procedural dungeon and general game design ideas

--- a/mineclick.html
+++ b/mineclick.html
@@ -54,6 +54,8 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 
 * General:
 * Game development design - http://gamedevelopment.tutsplus.com/
+* Game Design Patterns: http://gameprogrammingpatterns.com/
+* Procedural dungeon generation: http://journal.stuffwithstuff.com/2014/12/21/rooms-and-mazes/
 
 * UI:
 * Design School for Developers - http://webdesign.tutsplus.com/series/design-school-for-developers--webdesign-13793
