Added a few more media items

--- a/mineclick.html
+++ b/mineclick.html
@@ -82,10 +82,12 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * RPG solo
 * http://www.rpgsolo.com/play.php
 
-** Media
+** Media (free, creative commons)
 * Creative commons photos: http://commons.wikimedia.org/wiki/Main_Page
 * landscapes: http://commons.wikimedia.org/wiki/Category:Landscapes
 * quality landscapes: http://commons.wikimedia.org/wiki/Category:Quality_images_of_landscapes
+* Free game art: http://opengameart.org/
+* Game icons: http://game-icons.net/
 -->
 
 <!-- 
