--- a/mineclick.html
+++ b/mineclick.html
@@ -81,6 +81,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 **STORY
 * RPG solo
 * http://www.rpgsolo.com/play.php
+* Writing Excuses 10.17 http://www.writingexcuses.com/2015/04/26/writing-excuses-10-17-qa-on-beginnings/, podcast all, but @7:50-8:34 - How to stage action at the beginning of a story
 
 ** Media (free, creative commons)
 * Creative commons photos: http://commons.wikimedia.org/wiki/Main_Page
