log master state on page load

--- a/mineclick.html
+++ b/mineclick.html
@@ -179,6 +179,8 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 			global.storyStarted = true;
 			progressStory(0);  //start game
 		}
+        
+        console.log('size of masterState: ' + JSON.stringify(masterState).length);
 	});
 </script>
 
