--- a/mineclick.html
+++ b/mineclick.html
@@ -74,6 +74,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * Clicking FF7 http://clickingff7.com/#/map
 * Collapsable tree menu: http://www.thecssninja.com/css/css-tree-menu
 * Collapsable list: http://code.stephenmorley.org/javascript/collapsible-lists/
+* 8 best jquery trees: http://webrevisions.com/jquery-plugins/8-best-jquery-tree-view-plugin/#.VW0gElVViko
 
 * Dark Room - Web -> IOS
 * http://www.gamasutra.com/view/news/212230/A_Dark_Rooms_unique_journey_from_the_web_to_iOS.php
