Forage clicks update category tree

--- a/mineclick.html
+++ b/mineclick.html
@@ -187,6 +187,9 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 		}
         
         console.log('size of masterState: ' + JSON.stringify(masterState).length);
+        
+        // AT THIS POINT, EVERYTHING IN THE DOM SHOULD HAVE BEEN INITIALIZED
+        // NOW main.js STARTS THE INCREMENTAL LOOP
 	});
 </script>
 
