Added dungeon generator notes

--- a/mineclick.html
+++ b/mineclick.html
@@ -50,6 +50,11 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * (Google) "fractal map generator" https://www.google.com/webhp?sourceid=chrome-instant&rlz=1C1CHFX_enUS601US601&ion=1&espv=2&es_th=1&ie=UTF-8#q=fractal%20map%20generator
 * Polygon map generation: http://www-cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/
 * https://github.com/lebesnec/island.js
+* Dungeon generator (free server-side map generator):
+*   https://donjon.bin.sh/d20/dungeon/
+*   https://donjon.bin.sh/apps/
+
+
 
 **DESIGN
 
