--- a/mineclick.html
+++ b/mineclick.html
@@ -123,6 +123,9 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="js/constants.js"></script>
 <script type="text/javascript" src="js/debug.js"></script>
 
+<!-- utility functions -->
+<script type="text/javascript" src="js/util/staticFunctions.js"></script>
+
 <!-- model -->
 <script type="text/javascript" src="js/models/states.js"></script>
 <script type="text/javascript" src="js/models/model.js"></script>
