--- a/mineclick.html
+++ b/mineclick.html
@@ -98,6 +98,9 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 * quality landscapes: http://commons.wikimedia.org/wiki/Category:Quality_images_of_landscapes
 * Free game art: http://opengameart.org/
 * Game icons: http://game-icons.net/
+
+Graphs:
+* http://stackoverflow.com/questions/16058073/how-do-i-draw-a-graph-or-tree-structure-in-javascript
 -->
 
 <!-- 
