--- a/mineclick.html
+++ b/mineclick.html
@@ -102,6 +102,7 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 Graphs:
 * http://stackoverflow.com/questions/16058073/how-do-i-draw-a-graph-or-tree-structure-in-javascript
 * http://theory.stanford.edu/~amitp/GameProgramming/MapRepresentations.html
+* This one may work!  http://js.cytoscape.org/#top
 -->
 
 <!-- 
