Basic Cytoscape.js integration

--- a/mineclick.html
+++ b/mineclick.html
@@ -123,6 +123,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="lib/island/perlin.js"></script>
 <script type="text/javascript" src="lib/island/Island.js"></script>
 <script type="text/javascript" src="lib/collapsiblelists/CollapsibleLists.js"></script>
+<script type="text/javascript" src="lib/cytoscape.js-2.4.2/build/cytoscape.min.js"></script>
 
 <!-- core -->
 <script type="text/javascript" src="js/constants.js"></script>
@@ -269,6 +270,9 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 </div>
 <div id="mapContainer">
         <canvas id="land" height="500" width="500"></canvas>
+</div>
+<div id="internalMapContainer">
+        
 </div>
         <canvas id="perlin" hidden="true"></canvas>
 <div id="joyrideTips" style="display:none">
