--- a/mineclick.html
+++ b/mineclick.html
@@ -124,6 +124,7 @@ Derrick for JS polymorphism help: http://collabedit.com/qbtb4
 <script type="text/javascript" src="lib/island/Island.js"></script>
 <script type="text/javascript" src="lib/collapsiblelists/CollapsibleLists.js"></script>
 <script type="text/javascript" src="lib/cytoscape.js-2.4.2/build/cytoscape.min.js"></script>
+<script type="text/javascript" src="lib/lz-string-master/libs/lz-string.min.js"></script>
 
 <!-- core -->
 <script type="text/javascript" src="js/constants.js"></script>
