Added inspiration section to notes

--- a/mineclick.html
+++ b/mineclick.html
@@ -102,6 +102,12 @@ http://old.civfanatics.com/images/civ2/poster/civ2chart.jpg
 Graphs:
 * http://stackoverflow.com/questions/16058073/how-do-i-draw-a-graph-or-tree-structure-in-javascript
 * http://theory.stanford.edu/~amitp/GameProgramming/MapRepresentations.html
+* MUD javascript map: http://www.mudconnect.com/SMF/index.php?topic=74492.msg163422#msg163422 , https://github.com/arendjr/PlainText
+
+INSPIRATION:
+Dynamic worlds, dynamic creatures, dynamic quests:
+* http://web.archive.org/web/20080211222642/http://www.cs.umd.edu/~jra/craft3.pdf -
+   - Concepts: 
 -->
 
 <!-- 
